--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             command: |
               python3 -m venv venv
               . venv/bin/activate
-              python install -r requirements.txt
+              pip install -r requirements.txt
         # Step 3: run linter and tests
         - run:
             name: run tests
